test(client): WireMock contract tests, unit tests and live sandbox e2e
The scope-guard suite pins the behaviour that makes this API hard to integrate:
a 200 token response without a granted scope, which would otherwise surface as
an unexplainable 403 on every call.

Two defects surfaced while writing these and are fixed in the code, not the
assertions: config scope order was non-deterministic (Set.copyOf randomizes
iteration), and the codec put six empty arrays on the wire that the caller had
never populated.